Add: Imagen en las variantes y productos modelo migracion de variantes cambiado
